Mobile fixes - Fix Join game screen - Quick fix to typeahead in New Game for avoiding overflow

--- a/frontend/src/Theme.scss
+++ b/frontend/src/Theme.scss
@@ -30,8 +30,9 @@ $color-success: #3fa46d;
   --font-size-min: 0.75rem;
   --font-size-small: 0.875rem;
   --font-size-normal: 1rem;
-  --font-size-medium: 1.3rem;
-  --font-size-large: 2rem;
+  --font-size-medium: 1.125rem;
+  --font-size-large: 1.3rem;
+  --font-size-larger: 2rem;
   --font-size-xlarge: 3rem;
 
   --letter-spacing-smallcaps: 0.05em;
